demos/5/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 8080
